infra/frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sneak-peek-front
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: sneak-peek-front
