infra/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sneek-peak-front
spec:
  rules:
    - host: sneek-peak.orchestrate.ops.consensys.net
      http:
        paths:
          - backend:
              serviceName: sneak-peek-front
              servicePort: 80
            path: /
  tls:
    - hosts:
        - sneek-peak.orchestrate.ops.consensys.net
